# lenguaje-de-programacion

documentaciones/: cs.ipynb  php.ipynb  ruby.ipynb
formulario_php/: index.php  procesar.php  usuarios.json
landing_mi_gatito/: index.php
landing_mi_gatito/img/: image5.HEIC  image6.HEIC  image7.HEIC  image8.HEIC  image9.HEIC
todo_list_go/: .todos.json  color_test.go  colors.go  go.mod  todo.go  todo_test.go
todo_list_go/cmd/todo/: main.go  main_test.go
todo_list_rust/: .todos.json  Cargo.toml
todo_list_rust/src/: colors.rs  main.rs  tasks.rs
todo_list_rust/test/: cli.rs
